# auto-hinge

./: .gitignore  PROJECT_STRUCTURE.md  README.md  UV_MEGA_DOC.md  concat_docs.sh  config.json  config_manager.py  gui.py  main.py  model.py  pyproject.toml  screenshot.py
